<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="me.camilogonzalez.portafolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/title_label"
        android:layout_marginTop="43dp"
        android:text="@string/title_label"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/popular_movies_button"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/title_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/popular_movies_button" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stock_hawk_button"
        android:id="@+id/stock_hawk_button"
        android:layout_below="@+id/popular_movies_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger_button"
        android:id="@+id/build_it_bigger_button"
        android:layout_below="@+id/stock_hawk_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_your_app_material_button"
        android:id="@+id/make_your_app_material_button"
        android:layout_below="@+id/build_it_bigger_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_ubiquitous_button"
        android:id="@+id/go_ubiquitous_button"
        android:layout_below="@+id/make_your_app_material_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/capstone_button"
        android:id="@+id/capstone_button"
        android:layout_below="@+id/go_ubiquitous_button"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
